# trading-bot

./: README.md  run_example.py
hedgefund_simulator/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  __init__.py  backtest_engine.py  cli.py  config.py  example.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_integration.py
hedgefund_simulator/.github/workflows/: ci.yml
hedgefund_simulator/agents/: __init__.py  base_agent.py  market_data_agent.py  portfolio_manager_agent.py  quant_agent.py  risk_manager_agent.py
hedgefund_simulator/config/: example_config.yaml
hedgefund_simulator/scripts/: release.py  verify_installation.py
hedgefund_simulator/tests/: test_hedgefund_simulator.py
hedgefund_simulator/utils/: __init__.py  config_utils.py  data_utils.py  openai_utils.py  performance_metrics.py  plotting.py
